--- a/GroupLockiOS/GroupLock/Base.lproj/Main.storyboard
+++ b/GroupLockiOS/GroupLock/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
@@ -278,7 +278,7 @@
                         <barButtonItem key="backBarButtonItem" title="Back" id="zu9-7U-oVW"/>
                         <barButtonItem key="rightBarButtonItem" enabled="NO" title="Next" id="Leg-Dc-weu">
                             <connections>
-                                <segue destination="vTA-sU-hsi" kind="show" id="4aj-4M-Izd"/>
+                                <segue destination="vTA-sU-hsi" kind="show" identifier="KeyType" id="4aj-4M-Izd"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -390,7 +390,7 @@
         <!--Number Of Keys-->
         <scene sceneID="S7w-4u-xQY">
             <objects>
-                <viewController id="PUy-bJ-rb1" customClass="NumberOfKeysViewController" customModule="GroupLock" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="NumberOfKeysViewController" id="PUy-bJ-rb1" customClass="NumberOfKeysViewController" customModule="GroupLock" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="u5W-qr-D7n"/>
                         <viewControllerLayoutGuide type="bottom" id="NUO-f3-vRZ"/>
@@ -455,7 +455,7 @@
                         <barButtonItem key="backBarButtonItem" title="Back" id="HLb-FG-cDF"/>
                         <barButtonItem key="rightBarButtonItem" title="Next" id="3N9-g4-PfW">
                             <connections>
-                                <segue destination="nBG-Ui-WPY" kind="show" id="tde-5B-Flf"/>
+                                <segue destination="nBG-Ui-WPY" kind="show" identifier="ProvideKey" id="tde-5B-Flf"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -467,10 +467,10 @@
             </objects>
             <point key="canvasLocation" x="4385" y="-601"/>
         </scene>
-        <!--Your Keys-->
+        <!--ProvideKey-->
         <scene sceneID="GQ5-4G-oR8">
             <objects>
-                <collectionViewController id="nBG-Ui-WPY" customClass="ProvideKeyViewController" customModule="GroupLock" customModuleProvider="target" sceneMemberID="viewController">
+                <collectionViewController id="nBG-Ui-WPY" userLabel="ProvideKey" customClass="ProvideKeyViewController" customModule="GroupLock" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="w2s-Bi-0nc">
                         <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
