--- a/GroupLockApplication/app/src/main/res/layout/activity_choose_to_do.xml
+++ b/GroupLockApplication/app/src/main/res/layout/activity_choose_to_do.xml
@@ -4,7 +4,8 @@ xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="fill_parent"
 android:layout_height="fill_parent"
 android:orientation="vertical"
-tools:context=".LibraryActivity" >
+tools:context=".LibraryActivity"
+    android:background="@color/colorBackGround">
 
 
 <include layout="@layout/library_toolbar" />
