--- a/GroupLockApplication/app/src/main/res/layout/activity_decr_img.xml
+++ b/GroupLockApplication/app/src/main/res/layout/activity_decr_img.xml
@@ -4,13 +4,14 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
-    tools:context=".DecrImg" >
+    tools:context=".DecrImg"
+    android:background="@color/colorBackGround">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/keys_type_selection_toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
+        android:background="@color/colorToolbar"
         android:elevation="4dp"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
