--- a/GroupLockApplication/app/src/main/res/layout/activity_settings.xml
+++ b/GroupLockApplication/app/src/main/res/layout/activity_settings.xml
@@ -4,7 +4,8 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
-    tools:context=".SettingsActivity" >
+    tools:context=".SettingsActivity"
+    android:background="@color/colorBackGround">
 
     <include layout="@layout/library_toolbar" />
 
@@ -17,8 +18,9 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="false"
         android:layout_alignParentRight="true"
-        android:layout_marginTop="62dp"
-        android:text="Запрашивать пароль при запуске?"/>
+        android:layout_marginTop="72dp"
+        android:text="Запрашивать пароль при запуске?"
+        android:textSize="18dp" />
 
 
 
