--- a/GroupLockApplication/app/src/main/res/layout/library_toolbar.xml
+++ b/GroupLockApplication/app/src/main/res/layout/library_toolbar.xml
@@ -5,5 +5,5 @@
     android:layout_width="match_parent"
     app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
     android:layout_height="?android:actionBarSize"
-    android:background="@color/colorPrimary"
+    android:background="@color/colorToolbar"
     app:popupTheme="@style/Toolbar_Popup"/>
