--- a/GroupLockApplication/app/src/main/res/layout/load_layout.xml
+++ b/GroupLockApplication/app/src/main/res/layout/load_layout.xml
@@ -4,16 +4,18 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
-    tools:context=".NumberOfKeysActivity" >
+    tools:context=".NumberOfKeysActivity"
+    android:background="@color/colorBackGround">
 
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/keys_type_selection_toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        android:elevation="4dp"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
+  <include layout="@layout/library_toolbar" />
+    <!--     <android.support.v7.widget.Toolbar
+           android:id="@+id/keys_type_selection_toolbar"
+           android:layout_width="match_parent"
+           android:layout_height="?attr/actionBarSize"
+           android:background="?attr/colorPrimary"
+           android:elevation="4dp"
+           android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>-->
 
     <Button
         android:layout_width="350dp"
