--- a/GroupLockApplication/app/src/main/res/values/dimens.xml
+++ b/GroupLockApplication/app/src/main/res/values/dimens.xml
@@ -2,4 +2,7 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="enter_password">48dp</dimen>
+    <dimen name="activity_button_hight">48dp</dimen>
+    <dimen name="activity_button_text">24dp</dimen>
 </resources>
