--- a/GroupLockApplication/app/src/main/res/layout/activity_encr_img_and_qr.xml
+++ b/GroupLockApplication/app/src/main/res/layout/activity_encr_img_and_qr.xml
@@ -8,30 +8,32 @@
     android:background="@color/colorBackGround">
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/keys_type_selection_toolbar"
+        android:id="@+id/encr_img_and_qr_toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/colorToolbar"
         android:elevation="4dp"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
-    <ImageView
+    <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageEncr"
-        android:layout_below="@+id/keys_type_selection_toolbar"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp" />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageQr"
-        android:layout_alignLeft="@+id/imageEncr"
-        android:layout_alignStart="@+id/imageEncr"
+        android:id="@+id/scrollView2"
         android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/imageEncr"
-        android:layout_alignEnd="@+id/imageEncr" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/encr_img_and_qr_toolbar"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" >
+
+        <TableLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/encr_img_and_qr_toolbar"
+            android:id="@+id/tableLayout2"></TableLayout>
+    </ScrollView>
 
 
 </RelativeLayout>
