--- a/GroupLockiOS/GroupLock/Base.lproj/Main.storyboard
+++ b/GroupLockiOS/GroupLock/Base.lproj/Main.storyboard
@@ -5,6 +5,7 @@
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
+        <capability name="Navigation items with more than one left or right bar item" minToolsVersion="7.0"/>
     </dependencies>
     <scenes>
         <!--Password View Controller-->
@@ -226,13 +227,19 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="fileToProcessCell" id="kQ2-9z-jjv" userLabel="fileToProcessCell" customClass="ChooseFileViewCell" customModule="GroupLock" customModuleProvider="target">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="fileToProcessCell" id="kQ2-9z-jjv" userLabel="fileToProcessCell" customClass="FileCollectionViewCell" customModule="GroupLock" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="120" height="120"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                     <rect key="frame" x="0.0" y="0.0" width="120" height="120"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1tE-t8-DAR">
+                                            <rect key="frame" x="0.0" y="0.0" width="120" height="120"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="1tE-t8-DAR" secondAttribute="height" multiplier="1:1" id="Q1z-xZ-Ygz"/>
+                                            </constraints>
+                                        </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Filename" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="47c-Hj-uXH">
                                             <rect key="frame" x="0.0" y="90" width="120" height="30"/>
                                             <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.5" colorSpace="calibratedRGB"/>
@@ -240,12 +247,6 @@
                                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1tE-t8-DAR">
-                                            <rect key="frame" x="0.0" y="0.0" width="120" height="120"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" secondItem="1tE-t8-DAR" secondAttribute="height" multiplier="1:1" id="Q1z-xZ-Ygz"/>
-                                            </constraints>
-                                        </imageView>
                                     </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
@@ -526,11 +527,112 @@
                             <outlet property="delegate" destination="nBG-Ui-WPY" id="1FB-zW-jLh"/>
                         </connections>
                     </collectionView>
-                    <navigationItem key="navigationItem" title="Your Keys" id="LcH-P9-HxB"/>
+                    <navigationItem key="navigationItem" title="Your Keys" id="LcH-P9-HxB">
+                        <barButtonItem key="rightBarButtonItem" title="Next" id="MMT-rg-Zc8">
+                            <connections>
+                                <segue destination="EMn-t3-28b" kind="show" id="jDq-Ks-DDQ"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="req-1E-p2b" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="5138" y="-580"/>
+        </scene>
+        <!--Encrypted File-->
+        <scene sceneID="KgL-Yt-Vv4">
+            <objects>
+                <collectionViewController storyboardIdentifier="EncryptedFile" id="EMn-t3-28b" userLabel="Encrypted File" customClass="EncryptedFileViewController" customModule="GroupLock" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="CCc-7r-cUG">
+                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="PmQ-Ob-ApJ">
+                            <size key="itemSize" width="156" height="156"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="EncryptedFileCell" id="arA-jv-RlQ" userLabel="EncryptedFile Cell" customClass="FileCollectionViewCell" customModule="GroupLock" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="156" height="156"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="156" height="156"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ago-jO-Opw" userLabel="EncryptedFile View">
+                                            <rect key="frame" x="0.0" y="0.0" width="156" height="156"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="ago-jO-Opw" secondAttribute="height" multiplier="1:1" id="Pxp-ex-gT6"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Filename" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cky-UE-9GE">
+                                            <rect key="frame" x="0.0" y="117" width="156" height="39"/>
+                                            <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.5" colorSpace="calibratedRGB"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LockIcon" translatesAutoresizingMaskIntoConstraints="NO" id="egy-d2-1Pb">
+                                            <rect key="frame" x="46.5" y="34" width="64" height="64.5"/>
+                                            <color key="tintColor" red="0.29803921568627451" green="0.68627450980392157" blue="0.30196078431372547" alpha="1" colorSpace="calibratedRGB"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="egy-d2-1Pb" secondAttribute="height" multiplier="1:1" id="QPM-HE-FsR"/>
+                                            </constraints>
+                                        </imageView>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                                <constraints>
+                                    <constraint firstItem="egy-d2-1Pb" firstAttribute="centerY" secondItem="ago-jO-Opw" secondAttribute="centerY" multiplier="0.85" id="NRz-Ho-Zmr"/>
+                                    <constraint firstItem="cky-UE-9GE" firstAttribute="bottom" secondItem="ago-jO-Opw" secondAttribute="bottom" id="bcw-Tp-qjI"/>
+                                    <constraint firstItem="cky-UE-9GE" firstAttribute="trailing" secondItem="ago-jO-Opw" secondAttribute="trailing" id="cPM-UA-rWa"/>
+                                    <constraint firstItem="ago-jO-Opw" firstAttribute="centerX" secondItem="arA-jv-RlQ" secondAttribute="centerX" id="gp7-CD-1NO"/>
+                                    <constraint firstItem="ago-jO-Opw" firstAttribute="width" secondItem="arA-jv-RlQ" secondAttribute="width" id="iuc-XX-AOb"/>
+                                    <constraint firstItem="ago-jO-Opw" firstAttribute="centerY" secondItem="arA-jv-RlQ" secondAttribute="centerY" id="oQW-Bw-Tbb"/>
+                                    <constraint firstItem="egy-d2-1Pb" firstAttribute="centerX" secondItem="ago-jO-Opw" secondAttribute="centerX" id="ouF-DD-CBU"/>
+                                    <constraint firstItem="cky-UE-9GE" firstAttribute="leading" secondItem="ago-jO-Opw" secondAttribute="leading" id="ozo-bz-e7W"/>
+                                    <constraint firstItem="cky-UE-9GE" firstAttribute="height" secondItem="ago-jO-Opw" secondAttribute="height" multiplier="0.25" id="wrD-lt-cgK"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="nuiClass" value="CollectionViewCell"/>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <outlet property="filenameLabel" destination="cky-UE-9GE" id="fm7-bz-db7"/>
+                                    <outlet property="lockIcon" destination="egy-d2-1Pb" id="z0k-1B-DIk"/>
+                                    <outlet property="thumbnailView" destination="ago-jO-Opw" id="A8C-hw-BSr"/>
+                                </connections>
+                            </collectionViewCell>
+                        </cells>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="string" keyPath="nuiClass" value="GeneralView"/>
+                        </userDefinedRuntimeAttributes>
+                        <connections>
+                            <outlet property="delegate" destination="EMn-t3-28b" id="gd8-Wc-Krx"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" title="Encrypted Files" id="upF-R3-NhI">
+                        <rightBarButtonItems>
+                            <barButtonItem style="done" systemItem="save" id="VZy-dk-B3v">
+                                <connections>
+                                    <action selector="onSaveButton:" destination="EMn-t3-28b" id="NwQ-On-3Y9"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem systemItem="action" id="cCH-iN-QJV">
+                                <connections>
+                                    <action selector="onShareButton:" destination="EMn-t3-28b" id="7f8-SL-Miy"/>
+                                </connections>
+                            </barButtonItem>
+                        </rightBarButtonItems>
+                    </navigationItem>
+                    <connections>
+                        <segue destination="JSn-jz-IV3" kind="unwind" identifier="ReturnToHomeScreen" unwindAction="unwindToHome:" id="fKZ-2c-BVO"/>
+                    </connections>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zZm-mr-hc1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="JSn-jz-IV3" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="5844" y="-580"/>
         </scene>
         <!--Library-->
         <scene sceneID="VV6-CX-haO">
@@ -791,6 +893,7 @@
         <image name="HomeButtonSelected" width="32" height="32"/>
         <image name="LibraryButton" width="32" height="32"/>
         <image name="LibraryButtonSelected" width="32" height="32"/>
+        <image name="LockIcon" width="64" height="64"/>
         <image name="SettingsButton" width="32" height="32"/>
         <image name="SettingsButtonSelected" width="32" height="32"/>
     </resources>
