--- a/GroupLockiOS/GroupLock/Base.lproj/Main.storyboard
+++ b/GroupLockiOS/GroupLock/Base.lproj/Main.storyboard
@@ -542,7 +542,7 @@
         <!--Encrypted File-->
         <scene sceneID="KgL-Yt-Vv4">
             <objects>
-                <collectionViewController storyboardIdentifier="EncryptedFile" id="EMn-t3-28b" userLabel="Encrypted File" customClass="EncryptedFileViewController" customModule="GroupLock" customModuleProvider="target" sceneMemberID="viewController">
+                <collectionViewController storyboardIdentifier="EncryptedFileViewController" id="EMn-t3-28b" userLabel="Encrypted File" customClass="EncryptedFileViewController" customModule="GroupLock" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="CCc-7r-cUG">
                         <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
